Fixed top button clipping thru header

--- a/src/styles/bullet-card.css
+++ b/src/styles/bullet-card.css
@@ -1,17 +1,21 @@
 .cardFooter {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
 }
 
 .cardItems {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 0px;
     margin: 0%;
     font-size: small;
+    text-align: center;
+    @media (min-width: 768px) {
+        text-align: left;
+    }
 }
 
 
